[package]
name = "ckb-dev"
version = "0.0.1-alpha.0"
authors = ["Boyu Yang <yangby@cryptape.com>"]
edition = "2018"
description = "A simple tool for CKB DevOps."
homepage = "https://github.com/yangby-cryptape/ckb-dev"
repository = "https://github.com/yangby-cryptape/ckb-dev"
keywords = ["ckb"]
license = "MIT"
readme = "README.md"
include = ["Cargo.lock", "src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
